--- a/src/App.css
+++ b/src/App.css
@@ -47,4 +47,13 @@
   padding:10px 17px;
 
   border-radius: 7px;
+  cursor: pointer;
+}
+
+
+
+.nav-btns:hover{
+  background-color: #fff;
+  color:#333;
+
 }
